--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -38,23 +38,12 @@
         <action
             android:id="@+id/action_accompanimentMenuFragment_to_checkoutFragment"
             app:destination="@id/checkoutFragment" />
-        <action
-            android:id="@+id/action_accompanimentMenuFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment"
-            app:popUpTo="@id/startOrderFragment"
-            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/checkoutFragment"
         android:name="com.example.lunchtray.ui.order.CheckoutFragment"
         android:label="fragment_checkout"
-        tools:layout="@layout/fragment_checkout" >
-        <action
-            android:id="@+id/action_checkoutFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment"
-            app:popUpTo="@id/startOrderFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+        tools:layout="@layout/fragment_checkout" />
     <fragment
         android:id="@+id/entreeMenuFragment"
         android:name="com.example.lunchtray.ui.order.EntreeMenuFragment"
@@ -63,11 +52,6 @@
         <action
             android:id="@+id/action_entreeMenuFragment_to_sideMenuFragment"
             app:destination="@id/sideMenuFragment" />
-        <action
-            android:id="@+id/action_entreeMenuFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment"
-            app:popUpTo="@id/startOrderFragment"
-            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/sideMenuFragment"
@@ -77,10 +61,5 @@
         <action
             android:id="@+id/action_sideMenuFragment_to_accompanimentMenuFragment"
             app:destination="@id/accompanimentMenuFragment" />
-        <action
-            android:id="@+id/action_sideMenuFragment_to_startOrderFragment"
-            app:destination="@id/startOrderFragment"
-            app:popUpTo="@id/startOrderFragment"
-            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
